# osintgram4j

./: .build-info  .gitignore  AGREEMENTS.md  AppManifest.xml  AppSettings.cfg  Dockerfile  LICENSE  NewREADME.md  OrigRestore.md  PrivacyPolicy.md  Progress.md  README.md  RemovedFeatures.md  SECURITY.md  USAGE.md  app_ver  build.sh  install.py  nbuild.sh  osintgram4j.xml  setup.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  enhance-project.md
commons/: Allowance.md
commons/src/net/bc100dev/commons/: ApplicationException.java  ApplicationIOException.java  ApplicationRuntimeException.java  CLIParser.java  CLITools.java  DataConvert.java  ResourceManager.java  Terminal.java  TerminalColors.java  (+1 more)
commons/src/osintgram4j/commons/: AppConstants.java  PackagedApplication.java  ShellConfig.java  ShellEnvironment.java  TitleBlock.java  Titles.java
cxx/: .gitignore  CMakeLists.txt  README.md
cxx/include/: jvmti.h
cxx/include/app/: ConsoleSize.h  ExceptionHandle.h  MemoryInfo.h  UserIO.h
cxx/include/java_natives/: classfile_constants.h
cxx/src/: ConsoleSize.cpp  ConsoleSize.h  ExceptionHandle.cpp  ExceptionHandle.h  MemoryInfo.cpp  MemoryInfo.h  ProjectFileEditor.cpp  UserIO.cpp  UserIO.h
cxx/src/shell/: Terminal.cpp
docs/: RemovedFeatures.md  Usage.md
extres/: app_launcher.desktop  automatic-execution.o4jsh  ee.enc  icon.kra  logo.kra  og4j-logdata-launcher.properties  unused0.txt  unused2.txt  unused5.txt  usermod-example.json
extres/coms/: compatible_devices.json  devices-example.json  devices.json
modapi/: README.md
modapi/src/osintgram4j/api/: Command.java  Launcher.java  OptionSelect.java  Release.java  ReleaseManager.java  Shell.java  ShellAlias.java  ShellCaller.java  ShellCommandEntry.java  ShellException.java
src/net/bc100dev/osintgram4j/: EE.java  HelpPage.java  LGFMT.java  LogFormatter.java  LogMainClass.java  Logger.java  MainClass.java  NativeLoader.java  Settings.java  Shell.java  TitleBlock.java  app_ver.cfg  titleblock.txt
(+170 files in other folders)
